https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 first sparql route-through the EDC with agent plane.